tests/machine/x/go/cross_join_triple.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/cross_join_triple.go:15:21: undefined: Combos
tests/machine/x/go/cross_join_triple.go:16:16: undefined: Combos
tests/machine/x/go/cross_join_triple.go:20:32: undefined: Combos
